<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SwipeContacts</string>

    <!-- [where]_[desc]  -->
    <string name="contact_phone">PHONE</string>
    <string name="contact_email">EMAIL</string>
    <string name="contact_email_default">No Email</string>

    <string name="main_save">SAVE</string>
    <string name="main_delete">DELETE</string>
    <string name="main_restore">RESTORE</string>
    <string name="main_try_again">TRY AGAIN</string>

    <string name="trash_title">TRASH</string>
    <string name="trash_delete_all">DELETE ALL</string>

    <string name="setting_title">SETTING</string>
    <string name="setting_done">DONE</string>
    <string name="setting_help">HELP</string>
    <string name="setting_deleted_title">Number of contacts\ndeleted so far is </string>
    <string name="setting_version">VERSION</string>
    <string name="setting_contact_us">CONTACT US</string>

    <string name="dialog_message">This behavior is irreversible.\nDo you really want to delete all?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel" tools:ignore="ButtonCase">CANCEL</string>

    <string name="on_boarding_message_1">Swipe Left Side !\nContact Go Trash !</string>
    <string name="on_boarding_message_2">Swipe Right Means Skip this CARD !</string>
    <string name="on_boarding_message_3">It\'s OK !\nYou can delete or recover the card from the trash.</string>
    <string name="on_boarding_skip" translatable="false">SKIP</string>
    <string name="on_boarding_next" translatable="false">NEXT</string>
    <string name="on_boarding_start" translatable="false">START</string>

    <string name="test_name" translatable="false">김정문</string>
    <string name="test_name_long" translatable="false">#bnk투자증권 하태욱 대리 / 김정문 과장 친구</string>
    <string name="test_phone" translatable="false">010–5550–8540</string>
    <string name="test_email" translatable="false">test13254@gmail.com</string>

    <string name="license_title">OPENSOURCE LICENSE</string>
    <string name="license_1" translatable="false">CardStackView</string>
    <string name="license_1_url" translatable="false">https://github.com/yuyakaido/CardStackView</string>
    <string name="license_1_contents" translatable="false">\n
    Copyright 2018 yuyakaido\n\n

    Licensed under the Apache License, Version 2.0 (the "License");\n
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.\n
    </string>
    <string name="license_2" translatable="false">Glide</string>
    <string name="license_2_url" translatable="false">https://github.com/bumptech/glide</string>
    <string name="license_2_contents" translatable="false">\n
    Copyright © 2013 Byron Ruth\n\n

    All rights reserved.\n\n

    Redistribution and use in source and binary forms, with or without modification,
    are permitted provided that the following conditions are met:\n\n

        1. Redistributions of source code must retain the above copyright notice,
           this list of conditions and the following disclaimer.\n\n

        2. Redistributions in binary form must reproduce the above copyright
           notice, this list of conditions and the following disclaimer in the
           documentation and/or other materials provided with the distribution.\n\n

    THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
    ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
    DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
    ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
    (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
    LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
    ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
    (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
    SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n
    </string>

</resources>
