<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dialog_button"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/trash_delete_all"
            style="@style/dialogTitle"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_dialog_message"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dialog_message"
            style="@style/dialogMessage"
            android:layout_marginStart="@dimen/margin_dialog"
            android:layout_marginEnd="@dimen/margin_dialog"
            android:gravity="center_vertical"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_message"
            app:layout_constraintEnd_toStartOf="@id/btn_ok"
            android:text="@string/dialog_cancel"
            style="@style/dialogCancel"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_button_bottom"
            app:layout_constraintTop_toBottomOf="@id/txt_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            android:background="@color/colorRed"
            android:text="@string/dialog_ok"
            style="@style/dialogOk"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>